<resources>
    <string name="app_name">Sales Buddy</string>
    <string name="tvVersion">Versão</string>
    <string name="txUser">Usuário</string>
    <string name="txPassword">Senha</string>
    <string name="btnLogin">LOGIN</string>
    <string name="btnSales">REGISTRAR VENDA</string>
    <string name="btnReprocess">REPROCESSAR</string>
    <string name="tvTitleRegister">REGISTRAR VENDA</string>
    <string name="txResumer">RESUMO VENDA</string>
    <string name="tvName">Nome</string>
    <string name="tvNameEx">José Maria das Neves</string>
    <string name="tvCpf">CPF</string>
    <string name="tvCpfEx">000.000.000-00</string>
    <string name="tvEmail">E-mail</string>
    <string name="tvEmailEx">josemariadasneves@gmail.com</string>
    <string name="tvValueReceived">Valor recebido</string>
    <string name="tvValueReceivedEx">R$ 57,00</string>
    <string name="tvValueSales">Valor venda</string>
    <string name="tvChange">Troco devido</string>
    <string name="Alter">ALTERAR</string>
    <string name="btnEnd">FINALIZAR</string>
    <string name="tvTitleProof">COMPROVANTE</string>
    <string name="tvProofQuestion">ENVIAR COMPROVANTE PARA CLIENTE?</string>
    <string name="btnYes">SIM</string>
    <string name="btnNo">NÃO</string>
    <string name="tvSaleId">Venda nº 012345</string>
    <string name="tvTitleReprocesing">REPROCESSAMENTO</string>
    <string name="btnReprossesing">REPROCESSAR</string>
    <string name="btnResitring">IR PARA RESUMO</string>
    <string name="tvnameUser">NOME CLIENTE</string>
    <string name="tvEMAIL">E-MAIL</string>
    <string name="tvVALUESALE">VALOR VENDA</string>
    <string name="tvVALUERECEIVED">VALOR RECEBIDO</string>
    <string name="tvlogout">LOG OUT</string>
    <string name="numItems">01</string>
    <string name="tvdescription">Bolinho Ana Maria</string>
    <string name="titleItem">Itm</string>
    <string name="titleDescription">Descrição</string>
    <string name="txItems">ITEM 01</string>
    <string name="tvVersionNum">1.01.50</string>

    <string name="dialog_email_tv1">COMPROVANTE ENVIADO</string>
    <string name="dialog_email_tv2">COM SUCESSO PARA O E-MAIL:</string>
    <string name="dialog_resume_tv1">VENDA</string>
    <string name="dialog_resume_tv2">EFETUADA COM SUCESSO</string>
    <string name="dialog_repro_success_tv1">REPROCESSAMENTO</string>
    <string name="dialog_repro_success_tv2">EFETUADO COM SUCESSO</string>
    <string name="dialog_repro_error_tv1">PROBLEMAS ENCONTRADOS</string>
    <string name="dialog_repro_error_tv2">AO REPROCESSAR ALGUMAS</string>
    <string name="dialog_repro_error_tv3">VENDAS, TENTE NOVAMENTE</string>
    <string name="dialog_repro_resume_error_tv2">AO EFETUAR VENDA</string>
    <string name="dialog_repro_resume_error_tv3">VERIFIQUE O REPROCESSAMENTO</string>

    <string name="fillfields">"Preencha todos os campos"</string>
    <string name="error_connection">Não foi possível conectar ao servidor. Verifique se ele está ligado.</string>
    <string name="error_timeout">O servidor demorou muito para responder.</string>
    <string name="error_network">Falha de rede. Verifique sua conexão.</string>
    <string name="error_unexpected">Erro inesperado: %1$s</string>
    <string name="error_internal">Erro interno: %1$s</string>
    <string name="error_unknown">Erro desconhecido</string>
    <string name="error_parse_json">Erro ao processar resposta do servidor</string>
    <string name="error_missing_fields">Não conseguimos localizar a informação de todos os campos.</string>
    <string name="error_sale_not_found">Venda não encontrada no servidor.</string>
    <string name="error_sales_data_not_found">Dados da venda não encontrados.</string>
    <string name="error_empty_items">Atenção: Adicione pelo menos 1 item para continuar!</string>
    <string name="error_invalid_email">Digite um e-mail válido</string>
    <string name="error_invalid_cpf">CPF inválido</string>
    <string name="error_invalid_sale_value">Valor de venda não pode ser igual ou menor a 0</string>
    <string name="error_insufficient_amount">Valor recebido insuficiente</string>
    <string name="title_update_sale">ATUALIZAR VENDA</string>
    <string name="error_no_pending_reprocessing">Nenhum reprocessamento pendente.</string>
    <string name="error_loading_data">Erro ao carregar dados: %1$s</string>
    <string name="log_api_error_reprocessing">Erro no registro. Tentando reprocessamento...</string>
    <string name="log_api_failure_reprocessing">Falha de conexão. Enviando para reprocessamento...</string>
    <string name="error_reprocessing_failed">Falha no reprocessamento: %1$s</string>
    <string name="error_empty_item_field">Preencha este item antes de adicionar outro</string>
    <string name="dialog_title_error">Ops! Algo deu errado</string>

</resources>