<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProofActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="624dp"
        android:layout_height="736dp"
        android:scaleType="matrix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/img_background" />

    <LinearLayout
        android:id="@+id/LayoutProof"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="25dp"
        android:background="@color/beje"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTitleRegister4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleRegister2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvName"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/tvNameProof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvNameEx"
                        android:textColor="@color/gray"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="48dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvCpf"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/tvCpfProof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvCpfEx"
                        android:textColor="@color/gray"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvEmail"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/tvEmailProof"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvEmailEx"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view5"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginBottom="15dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/titleItem"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/titleDescription"
                    android:textColor="@color/gray" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewProof"
                        android:layout_width="match_parent"
                        android:layout_height="100dp" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <View
            android:id="@+id/view8"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginBottom="15dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvValueReceived"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvValueReceivedProof"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/tvValueReceivedEx"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvValueSales"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvValueSalesProof"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/tvValueReceivedEx"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvChange"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvChangeProof"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/tvValueReceivedEx"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvSaleId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/tvSaleId"
            android:textColor="@color/gray" />

    </LinearLayout>

    <Button
        android:id="@+id/btnYes"
        android:layout_width="155dp"
        android:layout_height="63dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/green"
        android:text="@string/btnYes"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNo"
        android:layout_width="155dp"
        android:layout_height="63dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/red"
        android:text="@string/btnNo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTitleRegister2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/tvTitleProof"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/tvTitleRegister4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/tvProofQuestion"
        android:textColor="@color/blue"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view10"
        android:layout_width="40dp"
        android:layout_height="2dp"
        android:background="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvTitleRegister"
        tools:layout_editor_absoluteY="605dp" />

    <View
        android:id="@+id/view9"
        android:layout_width="40dp"
        android:layout_height="2dp"
        android:background="@color/pink"
        app:layout_constraintEnd_toStartOf="@+id/tvTitleRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="605dp" />

    <View
        android:id="@+id/view3"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:background="@color/pink"
        app:layout_constraintEnd_toStartOf="@+id/tvTitleRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="101dp" />

    <View
        android:id="@+id/view4"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:background="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvTitleRegister"
        tools:layout_editor_absoluteY="101dp" />

    <ImageButton
        android:id="@+id/btnMenuProof"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        android:tint="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_menu" />

    <ImageButton
        android:id="@+id/btnBackProof"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_arrow" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="238dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/btnMenuProof"
        app:layout_constraintStart_toEndOf="@+id/btnBackProof"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_logo_top" />
</androidx.constraintlayout.widget.ConstraintLayout>