<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="624dp"
        android:layout_height="736dp"
        android:layout_marginTop="34dp"
        android:scaleType="matrix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/img_background" />

    <ImageButton
        android:id="@+id/btnMenuCreate"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        android:tint="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_menu" />

    <ImageButton
        android:id="@+id/btnBackRegister"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_arrow" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/btnMenuCreate"
        app:layout_constraintStart_toEndOf="@+id/btnBackRegister"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_logo_top" />

    <TextView
        android:id="@+id/tvTitleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/tvTitleRegister"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <View
        android:id="@+id/view"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="50dp"
        android:background="@color/pink"
        app:layout_constraintEnd_toStartOf="@+id/tvTitleRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBackRegister" />

    <View
        android:id="@+id/view2"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="50dp"
        android:background="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvTitleRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuCreate" />

    <LinearLayout
        android:id="@+id/LayoutRegister"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_register"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnResumer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleRegister">

        <EditText
            android:id="@+id/txName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/tx_register"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/tvnameUser"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textColor="@color/pink"
            android:textColorHint="@color/blueGray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txCpf"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/tx_register"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/tvCpf"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:textColor="@color/pink"
            android:textColorHint="@color/blueGray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/tx_register"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/tvEMAIL"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textColor="@color/pink"
            android:textColorHint="@color/blueGray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <EditText
            android:id="@+id/txSaleValue"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/tx_register"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/tvVALUESALE"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:textColor="@color/pink"
            android:textColorHint="@color/blueGray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txAmountReceived"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/tx_register"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/tvVALUERECEIVED"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:textColor="@color/pink"
            android:textColorHint="@color/blueGray"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnResumer"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_register"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:focusable="true">

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/btnResitring"
            android:textSize="16sp"
            android:textStyle="bold"
            android:clickable="false"/>

        <ImageButton
            android:id="@+id/btnRimg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:rotation="180"
            android:tint="@color/white"
            app:srcCompat="@drawable/icon_arrow"
            android:clickable="false"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>